bk_ida/gccida/g2/emdnorm
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emdnorm/src/real.c:3041:12: error: expected expression
*( _OWORD *)( s + 1) = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emdnorm/src/real.c:3041:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( s + 1) = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emdnorm/src/real.c:3065:12: error: expected expression
*( _OWORD *)rbit = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emdnorm/src/real.c:3065:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)rbit = 0LL; 
   ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emdnorm/src/obj/real.o] Error 1
